# finn-chatbot

./: .gitignore  README.md  check_db.py  debug_perf.py  debug_subscriptions.py  inspect_youtube.py  langgraph.json  pyproject.toml  repro_warnings.py  show_sql_queries.py  test_debug_strategy.py  test_real_queries.py  test_search_fixes.py  test_self_rag_standalone.py  test_smart_limit.py  test_sql_logging.py  test_sub_logic.py  test_youtube_deep.py
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
frontend/: bun.lockb  package-lock.json  package.json
scripts/: README.md  debug_p2p_data.py  debug_perf.py  enrich_transactions.py  example_sql_queries.py  repro_warnings.py  reproduce_issue.py  reproduce_state_issue.py  requirements.txt  show_sql_queries.py  test_checkpoint_growth.py  test_stress_suite.py  verify_currency_fix.py  verify_data_load.py  verify_db_schema.py  verify_filter_logic.py  verify_lowest_balance.py  verify_lowest_balance_exec.py  verify_p2p_fix.py  verify_sql_fix.py
scripts/debug/: generate_taxonomy_prompt.py  prompt_rules.txt  update_prompts_from_taxonomy.py  (+5 more)
statement_copilot/: __init__.py  config.py  flow_logger.py  log_context.py  readme.md  workflow.py
tests/: test_db_compatibility.py  test_description_search.py  test_filter_relaxation.py  test_patches.py  test_real_queries.py  test_self_rag_search.py  test_self_rag_standalone.py  verify_bm25_singleton.py  verify_pinecone_logic.py  verify_reranker_quality.py  verify_search_integration.py
(+30 files in other folders)
